
------v7 version 7

1. resized input images is available (autoresize function)
2. store mats correctly (only iFactor, struct, residual (c) and Ls)
3. compute neurodynamic only if the output does not exist, computer only recall if mats exist

------v8 version 8

1. implemented smap for channel combination (channel opponents) of squared mean (already existing) "channelsqmean", pointwise max "channelmax" and wta channel "channelwta"
2. fixed typo in condition before recall [") exist(" to ") && exist("]
3. for monochromatic images, copy channels 2 and 3 as same as 1st channel, otherwise NCZLd only computes intensity and recall fails on taking other channels
4. do not discriminate on processing neurodynamic when image is uniform (need to recall from chromatic, chromatic2)

------v9 version 9

1. implemented pmax2 smethod (max on orientation and channel)
2. residual forced to zeros (already done in the past, redone in recall code)
3. reduccio relative to Delta (adjustable connectivity matrix factor)


------v10 version 10

1. parametrized orgb_flag (enable or disable opponent2rgb at the end)
2. parametrized energy_norm (enable or disable energy normalization at the end)
3. parametrized autoresize_ds
4. kappax and kappay relative to reduccio
5. implemented autoresize_nd
6. parametrized autoresize_nd
7. parametrized tmem_res (temporal fusion using max or mean) and tmem_rw_res (temporal fusion before (1) or after (0) reconstruction - for single or for all tmem)
8. parametrized delete_mats
9. output subfolder is the name of the conf_struct (you can now compute several configurations)

------v11 version 11

1. implemented distort_gaussian (sums a gaussian to each channel)

------v12 version 12

1. implemented distort_fisheye (makes fisheye on specific centroid)
2. implemented foveate (taking fov_type: gaussian, fisheye...)
3. parametrized fov_type
4. implemented zli_magnification


