@@ -1,53 +1,0 @@
-
-
- 
-function [gaussian] = get_gaussian(M,N,sigma, factor)
-
-	gaussian = fspecial('Gaussian',[M N],sigma);
-	gaussian = normalize_map(gaussian,factor,0); %doubles go from 0 to 1 (factor = 1, floor_flag = 0)
-    
-    
-    imshow(gaussian); figure;
-    gzone = blankshift(gaussian,200, 500);
-    imshow(gzone);
-end
-
-
-function [mat_out] = blankshift(mat_in,x,y) %x,y are rows, columns. be careful
-    [M,N] = size(mat_in);
-    
-    mat_out = circshift(mat_in,[-round(M/2) -round(N/2)]);
-    
-    mat_out = circshift(mat_out,[x y]);
-       
-    rM = round(M/2);
-    rN = round(N/2);
-    
-    if x > round(M/2)
-         pad_row = 1:M-(x+rN);
-        mat_out(pad_row,:) = 0;
-    
-    else
-        if  x < round(M/2)
-            pad_row = x+rM:M;
-            mat_out(pad_row,:) = 0;
-        else
-            %do nothing
-        end
-    end
-    
-    if y > round(N/2)
-         pad_col = 1:N-(y+round(N/2)); 
-        mat_out(:,pad_col) = 0;
-    else
-        if  y < round(N/2)
-            
-            pad_col = N-(y+round(N/2)):N; 
-            mat_out(:,pad_col) = 0;
-        else
-            %do nothing
-        end
-    end
-    
-    
-end
